@@ -23,6 +23,7 @@ cupt (0.1.4) UNRELEASED; urgency=low
         - APT mangles ':' chars in names of deb archives. Cupt doesn't do the
           same. So, to pick up debs downloaded by libapt, worker now generates
           symlinks from 'right' names to 'mangled' names whenever possible.
+        - Move downloading stage to start of 'do_actions' method.
     - Config:
       - New configuration option 'cupt::resolver::track-reasons'.
     - Cache:
